--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
     "course": "CSE40-S25",
     "assignment": "HO0",
     "server": "http://lighthouse.soe.ucsc.edu",
-    "user": "sslug@ucsc.edu",
-    "pass": "1234567890"
+    "user": "zbabel@ucsc.edu",
+    "pass": "7343227a8f6be3bf46cce30e8ff2b0aa"
 }
